made contacts, added icons, fixed spacing of headers and subheader all across

--- a/index.scss
+++ b/index.scss
@@ -22,6 +22,7 @@ $subheader-margin-bottom: 0;
 
 * {
   box-sizing: border-box;
+  text-align: justify;
 }
 
 html, body {
@@ -37,18 +38,20 @@ h1, h2, h3 {
 }
 
 ul {
-  padding-left: 1.5rem;
+  padding-left: 1.1rem;
+}
+
+p {
+  margin: 0;
 }
 
 #A4 {
   width: 21cm;
   height: 29.7cm;
   background-color: #fff;
-  padding: 4.6rem 8rem;
-  // display: grid;
-  // grid-gap: 4rem;
-  // justify-content: center;
-  // grid-template-columns: 5fr 9fr;
+  padding: 8rem;
+  padding-top: 8rem;
+  padding-bottom: 4rem;
 }
 
 .contacts,
@@ -63,24 +66,62 @@ ul {
 
 
 .section {
-  margin-bottom: 4rem;
+  margin-bottom: 3.6rem;
 }
 
-.title {
+.header {
   font-size: 1.7rem;
+  margin-bottom: 2rem;
   text-align: center;
 
   &::before, &::after {
     content: '';
     border-radius: 4px;
     width: 100%;
-    max-width: 2rem;
+    max-width: 1rem;
     height: 0.2rem;
-    margin: 0.45rem 2.4rem;
-
+    margin-top: 0.45rem;
+    margin-bottom: 0.45rem;
     display: inline-block;
     background-color: black;
   }
+  &::before {
+    margin-right: 2.4rem;
+  }
+  &::after {
+    margin-left: 2.4rem;
+  }
+}
+
+.contacts {
+  padding: 0;
+  margin: 0;
+
+  & .flex-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 1rem 2rem;
+
+    & .icon {
+      width: 1.4rem;
+      height: 1.4rem;
+      margin: 0 1rem;
+      transform: translateY(3px);
+    }
+  }
+  &::before, &::after {
+    content: '';
+    width: 100%;
+    height: 0.1rem;
+    display: block;
+    background-color: #aaa;
+  }
+}
+
+.subheader {
+  font-size: 1.4rem;
+  margin-bottom: 0.4rem;
 }
 
 .main--header {
@@ -131,7 +172,6 @@ ul {
   & .left-column {
     padding-right: 2rem;
   }
-
   & .right-column {
     padding-left: 2rem;
   }
@@ -146,17 +186,15 @@ ul {
 
     & .skill--name {
     }
-
     & .skill--value {
+      width: 10rem;
       height: 6px;
       border-radius: 14px;
     }
-
     & .skill--value::-webkit-progress-value {
       background-color: #444;
       border-radius: 1px;
     }
-
     & .skill--value::-webkit-progress-bar {
       background-color: #bbb;
       border-radius: 1px;
@@ -164,7 +202,7 @@ ul {
   }
 
   & .skills--list {
-    margin-bottom: 2rem;
+    margin-bottom: 1.6rem;
   }
 
   & .skills--familiar-with {
@@ -172,6 +210,45 @@ ul {
   }
 }
 
-.education {
+.languages {
+  & .lang {
+  }
+  & .level {
+  }
+}
 
+.education {
+  & .diploma {
+    & .occupation {
+      display: block;
+      margin-bottom: 1rem;
+    }
+   & .university {
+      display: block;
+      margin-bottom: 1rem;
+    }
+    & .year {
+      display: block;
+    }
+  }
+}
+
+.projects {
+  & .project {
+    margin-bottom: 1.2rem;
+
+    & .address {
+      display: block;
+      margin-bottom: 1.2rem;
+    }
+    & .description {
+    }
+  }
+}
+
+.work-history {
+  & .address {
+      display: block;
+      margin-bottom: 1.2rem;
+    }
 }
